payas-server/src/validation/snapshots/payas_server__validation__document_validator__tests__aliases_valid.snap
---
source: payas-server/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    [
        ValidatedOperationDefinition {
            name: None,
            ty: Query,
            fields: [
                ValidatedField {
                    alias: Some(
                        Name(
                            "firstConcert",
                        ),
                    ),
                    name: Name(
                        "concert",
                    ),
                    arguments: [
                        (
                            "id",
                            Number(
                                Number(
                                    1,
                                ),
                            ),
                        ),
                    ],
                    subfields: [
                        ValidatedField {
                            alias: None,
                            name: Name(
                                "id",
                            ),
                            arguments: [],
                            subfields: [],
                        },
                        ValidatedField {
                            alias: Some(
                                Name(
                                    "headLine",
                                ),
                            ),
                            name: Name(
                                "title",
                            ),
                            arguments: [],
                            subfields: [],
                        },
                    ],
                },
            ],
        },
    ],
)
