payas-server/src/validation/snapshots/payas_server__validation__document_validator__tests__argument_valid.snap
---
source: payas-server/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedDocument {
        operations: [
            ValidatedOperationDefinition {
                name: None,
                typ: Query,
                fields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "concert",
                        ),
                        arguments: [
                            (
                                "id",
                                Number(
                                    Number(
                                        1,
                                    ),
                                ),
                            ),
                        ],
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "id",
                                ),
                                arguments: [],
                                subfields: [],
                            },
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "title",
                                ),
                                arguments: [],
                                subfields: [],
                            },
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "venue",
                                ),
                                arguments: [],
                                subfields: [
                                    ValidatedField {
                                        alias: None,
                                        name: Name(
                                            "id",
                                        ),
                                        arguments: [],
                                        subfields: [],
                                    },
                                    ValidatedField {
                                        alias: None,
                                        name: Name(
                                            "name",
                                        ),
                                        arguments: [],
                                        subfields: [],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
        operation_typ: Query,
    },
)
